# hew

./: Cargo.toml  README.md  colors.go  go.mod  go.sum  main.go
cmd/: cmds.go  root.go
go/: .gitignore  README.md  cht.go  cht_scopes.go  cmds.go  colors.go  db.go  go.mod  go.sum  load.go  main.go  symlinks.toml  task_manager.go
go/db/: db.go  init_db.go
go/pkg/cht/: cht_scopes.go
go/pkg/db/: db.go  init_db.go
go/pkg/task_manager/: task_manager.go
pkg/ai/: api.go  chat.go  cmd.go  filehandler.go  prompt.go  tea.go
pkg/cht/: cht.go  cmd.go
pkg/forestfox/: forestfox.go
pkg/hash/: cmd.go  hash.go
pkg/kinsta/: api.go  cmd.go  kinsta.go  models.go  seed.go
pkg/load/: cmd.go  load.go
pkg/seo/: cmd.go  seo.go
pkg/shared/: shared.go
pkg/stardew/: stardew.go
rust/: .gitignore
rust/src/: load.rs  utils.rs
rust/src/task/: event.rs  tui.rs  update.rs
src/: load.rs  main.rs  task.rs  utils.rs  which.rs
src/task/: app.rs  mod.rs  tui.rs  ui.rs  update.rs
