[package]
name = "hew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.0.27", features = ["cargo"] }
crossterm = "0.25.0"
dirs = "4.0.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
ratatui = "0.23.0"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = "1.32.0"
toml = "0.5.10"
